--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # ===============================
 # SERVER
 # ===============================
+server.address=192.168.1.7
 server.port=8080
 
 # ===============================
